[project]
name = "personal-site"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Kalel L. Martinho", email = "kalel@tutamail.com" }
]
dependencies = [
    "aiosqlite>=0.20.0",
    "fastapi>=0.110.0",
    "fastui>=0.5.2",
    "uvicorn>=0.27.1",
    "pydantic-settings>=2.2.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/personal_site"]
